# WorkFinder

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
src/: database.py  main.py  repository.py  settings.py
src/api/: __init__.py  dependencies.py  endpoints.py
src/migrations/: env.py
src/migrations/versions/: 1408a3ed85e7_migration2.py  1a8d0ea547b5_.py  1b696c1efba1_migration5_changed_relation_between_.py  1ea4817712fc_migration4_adjustments.py  9ffe1ca6dbf8_migration6_fixed_naming_error_in_hr_.py  f770cf7f3e93_migration3_changed_relation_between_.py
src/models/: seeking.py
src/schemas/: seeking_sch.py
